--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>Correo Electrónico: <span id="mostrar_correo"></span></p>
     </div>
     <div id="derecha">
-      <img id="mostrar_foto" src="img/faker.jpg">
+      <img id="mostrar_foto" src="faker.jpg">
       <h2>Seleccione el tipo de documento: </h2>
       <label>
         <i class='bx bxs-user-account'></i>
