--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
   <title>Información Personal</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
       <p>Correo Electrónico: <span id="mostrar_correo"></span></p>
     </div>
     <div id="derecha">
-      <img id="mostrar_foto" src="faker.jpg">
+      <img id="mostrar_foto" src="/assets/img/faker.jpg">
       <h2>Seleccione el tipo de documento: </h2>
       <label>
         <i class='bx bxs-user-account'></i>
@@ -44,7 +44,7 @@
       <input type="button" href="#" id="volver" value="Volver al Inicio">
     </div>
   </div>
-  <script src="script_2.js"></script>
+  <script src="/assets/script/script_2.js"></script>
 </body>
 </html>
 
